# winCanv

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  pyproject.toml  workspace-templates.install
examples/: engineering-day.json
src/: app_paths.cpp  app_paths.h  constants.h  control_service.cpp  control_service.h  desktop_entries.cpp  desktop_entries.h  kwin_controller.cpp  kwin_controller.h  main.cpp  models.cpp  models.h  template_store.cpp  template_store.h  workspace_manager.cpp  workspace_manager.h  workspace_panel.cpp  workspace_panel.h
tests/: test_manager.py
workspace_templates/: config.py  control_service.py  dbus_bridge.py  manager.py  models.py  template_store.py
workspace_templates.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
workspace_templates/assets/kwin-shortcut/: metadata.json
